--- a/welkom.css
+++ b/welkom.css
@@ -1,60 +1,16 @@
-*{
-    padding: 0;
-    margin: 0;
-    font-family: sans-serif;
-}
 body{
-    background-color: black;
-}
-.container{
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 100%;
-}
-.container span{
-    text-transform: uppercase;
-    display: block;
-}
-.text1{
-    color: white;
-    font-size: 100px;
-    font-weight: 700;
-    letter-spacing: 8px;
-    margin-bottom: 20px;
+    margin: 0;
+    padding: 0;
     background: black;
-    position: relative;
-    animation: text 3s 1;
 }
-.text2{
+
+#text{
+    color: white;
     font-size: 40px;
-    color: #6ab04c;
-    background: black;
-    animation: text 4s 1;
+    text-align: center;
+    margin-top: 300px;
+    text-transform: uppercase;
+    font-family: "Montserrat";
+    font-weight: 700;
 }
 
-.text3{
-    font-size: 10px;
-    color: white;
-    margin-top: 10px;
-    background: black;
-    animation: text 5s 1;
-}
-
-@keyframes text {
-    0%{
-        color: black;
-        margin-bottom: -40px;
-    }
-    30%{
-        letter-spacing: 25px;
-        margin-bottom: -40px;
-    }
-    85%{
-        letter-spacing: 8px;
-        margin-bottom: -40px;
-    }
-    
-}
