--- a/stylesheet.css
+++ b/stylesheet.css
@@ -202,17 +202,17 @@ header h5{
 
 }
 
-.css{
+.CSS{
     width: 100%;
 
 }
 
-.javascript{
+.Javascript{
     width: 75%;
 
 }
 
-.wordpress{
+.Wordpress{
     width: 50%;
 }
 
